# Utilities

./: .clang-format  .clang_tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: UtilitiesConfig.cmake
include/Utilities/: FileUtils.h  Singleton.h  StringUtils.h  VectorUtils.h
src/: FileUtils.cpp  StringUtils.cpp
test/: CMakeLists.txt  StringUtilsTest.cpp  VectorUtilsTest.cpp
